--- a/src/core/PaymentCleanArchitecture.Domain/PaymentCleanArchitecture.Domain.csproj
+++ b/src/core/PaymentCleanArchitecture.Domain/PaymentCleanArchitecture.Domain.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="Common\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
+
 </Project>
