--- a/src/pre/PaymentCleanArchitecture.Api/PaymentCleanArchitecture.Api.csproj
+++ b/src/pre/PaymentCleanArchitecture.Api/PaymentCleanArchitecture.Api.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\core\PaymentCleanArchitecture.Application\PaymentCleanArchitecture.Application.csproj" />
+  </ItemGroup>
+
 </Project>
