--- a/src/infras/PaymentCleanArchitecture.Persistence/PaymentCleanArchitecture.Persistence.csproj
+++ b/src/infras/PaymentCleanArchitecture.Persistence/PaymentCleanArchitecture.Persistence.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\core\PaymentCleanArchitecture.Domain\PaymentCleanArchitecture.Domain.csproj" />
   </ItemGroup>
 
